--- a/styling/slideshow.css
+++ b/styling/slideshow.css
@@ -1,32 +1,30 @@
 * {
   box-sizing: border-box;
 }
+.mySlides1,
+.mySlides2 {
+  display: none;
+}
+img {
+  vertical-align: middle;
+}
 
 /* Slideshow container */
-.slideshow-container,
-.slideshow-container2 {
+.slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
-.mySlides,
-.mySlides2 {
-  display: none;
-}
-
 /* Next & previous buttons */
 .prev,
-.next,
-.prev2,
-.next2 {
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
   padding: 16px;
+  margin-top: -22px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -36,58 +34,16 @@
 }
 
 /* Position the "next button" to the right */
-.next,
-.next2 {
+.next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+/* On hover, add a grey background color */
 .prev:hover,
-.next:hover,
-.prev2:hover,
-.next2:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext,
-.numbertext2 {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot,
-.dot2 {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover,
-.dot2:hover {
-  background-color: #717171;
+.next:hover {
+  background-color: #f1f1f1;
+  color: black;
 }
 
 /* Fading animation */
