--- a/styling/styles.css
+++ b/styling/styles.css
@@ -27,6 +27,10 @@ body {
 #linkedin {
   font-size: 16px;
 }
+
+.img-responsive {
+  margin: 15px 0;
+}
 /*
 main color palette
 -#DFD0FF light purple
