--- a/styling/slideshow.css
+++ b/styling/slideshow.css
@@ -13,7 +13,7 @@ img {
 .slideshow-container {
   max-width: 1000px;
   position: relative;
-  margin: auto;
+  margin: 15px;
 }
 
 /* Next & previous buttons */
