--- a/styling/styles.css
+++ b/styling/styles.css
@@ -99,7 +99,8 @@ timeline
   padding: 1px 16px;
   height: 100%;
 }
-
+@media screen and (max-width: 1280px) {
+}
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-width: 700px) {
   .sidebar {
