--- a/styling/styles.css
+++ b/styling/styles.css
@@ -6,6 +6,10 @@ body {
 }
 #projectsList li {
   list-style-type: none;
+  margin: 0%;
+}
+#projectList {
+  overflow: hidden;
 }
 .logo-responsive {
   text-align: center;
@@ -13,7 +17,7 @@ body {
 }
 /*add space between the sidebar sections*/
 #resourcesTabs {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 #projectTabs {
   margin-top: 20px;
@@ -69,7 +73,7 @@ timeline
   background-color: #b99df4;
   position: fixed;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   display: inline-block;
 }
 
@@ -96,10 +100,23 @@ timeline
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
 .content {
   margin-left: 250px;
-  padding: 1px 16px;
-  height: 100%;
+  padding: 0px 16px;
+  height: fit-content;
+  overflow: hidden;
+}
+@media screen and (max-width: 1920px) {
+  /*.sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }*/
 }
 @media screen and (max-width: 1280px) {
+  /*.sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }*/
 }
 /* On screens that are less than 700px wide, make the sidebar into a topbar */
 @media screen and (max-width: 700px) {
