start over with index and styling

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,146 +1,6 @@
 /*global styles*/
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 body {
-  background-color: #dfd0ff;
+  background-color: #dfdaf4;
   font-family: "Nunito", sans-serif;
-}
-#projectsList li {
-  list-style-type: none;
-  margin: 0%;
-}
-#projectList {
-  overflow: hidden;
-}
-.logo-responsive {
-  text-align: center;
-  margin: 0;
-}
-/*add space between the sidebar sections*/
-#resourcesTabs {
-  margin-bottom: 10px;
-}
-#projectTabs {
-  margin-top: 20px;
-}
-
-/*social icons*/
-#socials a {
-  text-align: left;
-}
-#socialsmenu {
-  display: inline-grid;
-  grid-template-columns: auto auto auto auto;
-}
-#insta,
-#twitter,
-#linkedin {
-  font-size: 20px;
-}
-
-.img-responsive {
-  margin: 15px;
-}
-.download-resume {
-  background-color: #c1f6e2;
-  color: #229760;
-  padding: 15px;
-  border: none;
-  font-size: 15px;
-}
-.download-resume:hover {
-  background-color: #c1f6e2;
-}
-/*
-main color palette
--#DFD0FF light purple
--#B99DF4 a little darker purple
--##9642cc darkest purple
-
-hover/active-color pallette
--#C1F6E2 light green ish
--#7DD7B5 a little darker
--#229760 darker green
-
-timeline
--#FFF0D7 light orange
-*/
-
-/* The side navigation menu */
-.sidebar {
-  margin: 0;
-  padding: 0;
-  width: 250px;
-  background-color: #b99df4;
-  position: fixed;
-  height: 100%;
-  overflow: hidden;
-  display: inline-block;
-}
-
-/* Sidebar links */
-.sidebar a {
-  display: block;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-}
-
-/* Active/current link */
-.sidebar a.active {
-  background-color: #c1f6e2;
-  color: #229760;
-}
-
-/* Links on mouse-over */
-.sidebar a:hover:not(.active) {
-  background-color: #c1f6e2;
-  color: #229760;
-}
-
-/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
-.content {
-  margin-left: 250px;
-  padding: 0px 16px;
-  height: fit-content;
-  overflow: hidden;
-}
-@media screen and (max-width: 1920px) {
-  /*.sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }*/
-}
-@media screen and (max-width: 1280px) {
-  /*.sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }*/
-}
-/* On screens that are less than 700px wide, make the sidebar into a topbar */
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {
-    float: left;
-  }
-
-  #socials {
-    display: inline-block;
-  }
-  div.content {
-    margin-left: 0;
-  }
-}
-
-/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
 }
