override bootstrap styling

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -4,3 +4,25 @@ body {
   background-color: #dfdaf4;
   font-family: "Nunito", sans-serif;
 }
+
+/*----- universal -----*/
+/*navbar*/
+.navbar {
+  background-color: #c0b7e5;
+}
+/*end of navbar*/
+/*footer*/
+/*end of footer*/
+/*----- end of universal -----*/
+
+/*----- home page -----*/
+
+/*----- end home page ----- */
+
+/*----- projects page -----*/
+
+/*----- end projects page ----- */
+
+/*----- about page -----*/
+
+/*----- end about page ----- */
