--- a/styling/styles.css
+++ b/styling/styles.css
@@ -156,9 +156,20 @@ main {
   #mainhome {
     padding: auto 0;
   }
-  #introcontent,
-  #project-grid {
+  #introcontent {
     margin: auto 18rem;
+  }
+  #project-grid {
+    margin: auto 0.5rem;
+  }
+  #project-grid-item {
+    height: 30rem;
+    width: 100%;
+    padding: 0 0;
+  }
+  /*project page*/
+  #back-to-top {
+    margin: 5rem 0;
   }
 }
 @media screen and (max-width: 425px) {
@@ -167,24 +178,30 @@ main {
     padding: auto 0;
     margin: auto 0;
   }
-  #introcontent,
+  #introcontent {
+    margin: auto 5rem;
+  }
+
   #project-grid {
-    margin: auto 10rem;
+    margin: 5rem 1rem;
   }
   .doglogo {
     width: 15rem;
     height: 15rem;
   }
-  #project-grid {
-    margin: 5rem 10.5rem;
-  }
   #project-grid-item {
-    background-color: #c0b7e5;
     height: 28rem;
-    width: 50%;
+    width: 100%;
     padding: 0 0;
   }
 }
 @media screen and (max-width: 375px) {
   /*--small phone--*/
+  #project-grid {
+    margin: 3rem 0.6rem;
+  }
+  .doglogo {
+    width: 12rem;
+    height: 12rem;
+  }
 }
