adding info to individual proj pages

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -138,6 +138,10 @@ main {
   margin: 6rem 3rem;
   text-align: left;
 }
+.ind-proj-text {
+  text-align: left;
+  width: 95%;
+}
 
 /*----- end projects page ----- */
 
