--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -7,6 +7,11 @@ body {
   overflow-x: hidden;
 }
 
+.main-intro {
+  position: relative;
+  margin: 1rem 0;
+}
+
 .home-intro {
   position: absolute;
   top: 50%;
