--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -7,7 +7,10 @@ body {
     background-color: #dfdaf4;
     overflow-x:hidden;
 }
-
+.main-intro{
+    position: relative;
+    margin: 1rem 0;
+}
 .home-intro {
     position: absolute;
     top: 50%;
