--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+/*-------------universal-------------*/
 body {
   width: 100%;
   height: 100%;
@@ -7,18 +8,33 @@ body {
   overflow-x: hidden;
 }
 
+/*-------------index-------------*/
 .main-intro {
   position: relative;
   margin: 1rem 0;
+  top: 10%;
+  left: 0%;
+  height: 150px;
+  padding: 0 0;
+}
+
+/*header on homepage*/
+#dog {
+  /*logo*/
+  position: relative;
+  height: 30rem;
+  top: 0%;
+  padding: 0 0;
 }
 
 .home-intro {
+  /*main header*/
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -80%);
-          transform: translate(-50%, -80%);
-  height: 160px;
+  -webkit-transform: translate(-50%, -180%);
+          transform: translate(-50%, -180%);
+  height: 80px;
   overflow: hidden;
   font-family: "Nunito", sans-serif;
   font-weight: 600;
@@ -27,12 +43,24 @@ body {
   color: black;
 }
 
-.animcontent {
+.home-intro-subtitle {
+  /*subheader under anim*/
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -45%);
+          transform: translate(-50%, -45%);
+  height: 80px;
+  overflow: hidden;
+}
+
+.animcontent {
+  /*animated text*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -55%);
+          transform: translate(-50%, -55%);
   height: 160px;
   overflow: hidden;
   font-family: "Nunito", sans-serif;
@@ -202,4 +230,6 @@ body {
             transform: translate3d(0, -20%, 0);
   }
 }
+
+/*------------end of index-------------*/
 /*# sourceMappingURL=sassStyles.css.map */
