--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -1,22 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 
+/*-------------universal-------------*/
 body {
     width: 100%;
     height: 100%;
     position: relative;
     background-color: #dfdaf4;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
-.main-intro{
+
+/*-------------index-------------*/
+.main-intro {
     position: relative;
     margin: 1rem 0;
+    top: 10%;
+    left: 0%;
+    height: 150px;
+    padding: 0 0;
 }
-.home-intro {
+/*header on homepage*/
+#dog {/*logo*/
+    position: relative;
+    height: 30rem;
+    top: 0%;
+    padding: 0 0;
+}
+
+.home-intro {/*main header*/
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -80%);
-    height: 160px;
+    transform: translate(-50%, -180%);
+    height: 80px;
     overflow: hidden;
 
     font-family: "Nunito", sans-serif;
@@ -26,11 +41,20 @@ body {
     color: black;
 }
 
-.animcontent {
+.home-intro-subtitle {/*subheader under anim*/
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -45%);
+    height: 80px;
+    overflow: hidden;
+}
+
+.animcontent {/*animated text*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -55%);
     height: 160px;
     overflow: hidden;
 
@@ -321,3 +345,5 @@ body {
         transform: translate3d(0, -20%, 0);
     }
 }
+
+/*------------end of index-------------*/
