--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -231,5 +231,106 @@ body {
   }
 }
 
+/*responsiveness*/
+@media screen and (max-width: 375px) {
+  #dog {
+    /*logo*/
+    position: relative;
+    height: 12rem;
+    top: 0%;
+    padding: 0 0;
+    margin: 0 4rem;
+  }
+  .home-intro {
+    /*main header*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -180%);
+            transform: translate(-50%, -180%);
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+    font-family: "Nunito", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: black;
+  }
+  .home-intro-subtitle {
+    /*subheader under anim*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -45%);
+            transform: translate(-50%, -45%);
+    height: 80px;
+    width: 100%;
+    overflow: hidden;
+  }
+  .animcontent {
+    /*animated text*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -55%);
+            transform: translate(-50%, -55%);
+    height: 160px;
+    overflow: hidden;
+    font-family: "Nunito", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: black;
+  }
+  .animcontent__container {
+    font-weight: 600;
+    overflow: hidden;
+    height: 45px;
+    padding: 0 40px;
+  }
+  .animcontent__container:before {
+    content: '{';
+    left: 0;
+  }
+  .animcontent__container:after {
+    content: '}';
+    position: absolute;
+    right: 0;
+  }
+  .animcontent__container:after, .animcontent__container:before {
+    position: absolute;
+    top: 0;
+    color: #414280;
+    /*colors brackets*/
+    font-size: 30px;
+    line-height: 35px;
+    /*helps not go in between lines*/
+    -webkit-animation-name: opacity;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: opacity;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+  }
+  .animcontent__container__list {
+    margin-top: 0;
+    padding: 0 40px;
+    text-align: center;
+    list-style: none;
+    -webkit-animation-name: change;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: change;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+  }
+  .animcontent__container__list__item {
+    line-height: 45px;
+    /*helps not stop in between lines*/
+    margin: 0;
+  }
+}
+
 /*------------end of index-------------*/
 /*# sourceMappingURL=sassStyles.css.map */
