--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -18,15 +18,18 @@ body {
     height: 150px;
     padding: 0 0;
 }
+
 /*header on homepage*/
-#dog {/*logo*/
+#dog {
+    /*logo*/
     position: relative;
     height: 30rem;
     top: 0%;
     padding: 0 0;
 }
 
-.home-intro {/*main header*/
+.home-intro {
+    /*main header*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -41,7 +44,8 @@ body {
     color: black;
 }
 
-.home-intro-subtitle {/*subheader under anim*/
+.home-intro-subtitle {
+    /*subheader under anim*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -50,7 +54,8 @@ body {
     overflow: hidden;
 }
 
-.animcontent {/*animated text*/
+.animcontent {
+    /*animated text*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -343,6 +348,125 @@ body {
     87.5%,
     95% {
         transform: translate3d(0, -20%, 0);
+    }
+}
+
+/*responsiveness*/
+@media screen and (max-width: 1440px) {}
+
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 425px) {}
+
+@media screen and (max-width: 375px) {
+    #dog {
+        /*logo*/
+        position: relative;
+        height: 12rem;
+        top: 0%;
+        padding: 0 0;
+        margin: 0 4rem;
+    }
+
+    .home-intro {
+        /*main header*/
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -180%);
+        width: 100%;
+        height: 80px;
+        overflow: hidden;
+
+        font-family: "Nunito", sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 30px;
+        color: black;
+    }
+
+    .home-intro-subtitle {
+        /*subheader under anim*/
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -45%);
+        height: 80px;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .animcontent {
+        /*animated text*/
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -55%);
+        height: 160px;
+        overflow: hidden;
+
+        font-family: "Nunito", sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 30px;
+        color: black;
+
+        &__container {
+            font-weight: 600;
+            overflow: hidden;
+            height: 45px;
+            padding: 0 40px;
+
+            &:before {
+                content: '{';
+                left: 0;
+            }
+
+            &:after {
+                content: '}';
+                position: absolute;
+                right: 0;
+            }
+
+            &:after,
+            &:before {
+                position: absolute;
+                top: 0;
+
+                color: #414280;
+                /*colors brackets*/
+                font-size: 30px;
+                line-height: 35px;
+                /*helps not go in between lines*/
+
+                -webkit-animation-name: opacity;
+                -webkit-animation-duration: 2s;
+                -webkit-animation-iteration-count: infinite;
+                animation-name: opacity;
+                animation-duration: 2s;
+                animation-iteration-count: infinite;
+            }
+
+            &__list {
+                margin-top: 0;
+                padding: 0 40px;
+                text-align: center;
+                list-style: none;
+
+                -webkit-animation-name: change;
+                -webkit-animation-duration: 10s;
+                -webkit-animation-iteration-count: infinite;
+                animation-name: change;
+                animation-duration: 10s;
+                animation-iteration-count: infinite;
+
+                &__item {
+                    line-height: 45px;
+                    /*helps not stop in between lines*/
+                    margin: 0;
+                }
+            }
+        }
     }
 }
 
