--- a/styling/styles.css
+++ b/styling/styles.css
@@ -194,6 +194,15 @@ main {
   #mainhome {
     padding: auto 0;
   }
+  .navbar-header{
+    display:flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav{
+    text-align: center;
+  }
   #introcontent {
     margin: auto 18rem;
   }
