--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -130,6 +130,7 @@ body {
     }
 }
 
+/*animated logisitics*/
 @-webkit-keyframes opacity {
 
     0%,
@@ -359,14 +360,12 @@ body {
 
 @media screen and (max-width: 768px) {}
 
-@media screen and (max-width: 425px) {}
-
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
     #dog {
         /*logo*/
 
         position: relative;
-        height: 12rem;
+        height: 15rem;
         top: 0%;
         padding: 0 0;
         margin: 0 4rem;
@@ -376,29 +375,29 @@ body {
         /*main header*/
 
         position: absolute;
-        top: 50%;
+        top: 70%;
         left: 50%;
         transform: translate(-50%, -180%);
-        width: 100%;
         height: 80px;
         overflow: hidden;
 
         font-family: "Nunito", sans-serif;
         font-weight: 600;
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 22px;
+        line-height: 40px;
         color: black;
     }
 
     .home-intro-subtitle {
         /*subheader under anim*/
+        font-size: 15px;
 
+        width: 90%;
         position: absolute;
-        top: 50%;
+        top: 90%;
         left: 50%;
         transform: translate(-50%, -45%);
         height: 80px;
-        width: 100%;
         overflow: hidden;
     }
 
@@ -406,7 +405,7 @@ body {
         /*animated text*/
 
         position: absolute;
-        top: 50%;
+        top: 90%;
         left: 50%;
         transform: translate(-50%, -55%);
         height: 160px;
@@ -414,8 +413,8 @@ body {
 
         font-family: "Nunito", sans-serif;
         font-weight: 500;
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 22px;
+        line-height: 40px;
         color: black;
 
         &__container {
@@ -442,8 +441,8 @@ body {
 
                 color: #414280;
                 /*colors brackets*/
-                font-size: 30px;
-                line-height: 35px;
+                font-size: 42px;
+                line-height: 45px;
                 /*helps not go in between lines*/
 
                 -webkit-animation-name: opacity;
@@ -469,6 +468,122 @@ body {
 
                 &__item {
                     line-height: 45px;
+                    /*helps not stop in between lines*/
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 375px) {
+    #dog {
+        /*logo*/
+
+        position: relative;
+        height: 12rem;
+        top: 0%;
+        padding: 0 0;
+        margin: 0 4rem;
+    }
+
+    .home-intro {
+        /*main header*/
+
+        position: absolute;
+        top: 75%;
+        left: 50%;
+        transform: translate(-50%, -180%);
+        width: 100%;
+        height: 80px;
+        overflow: hidden;
+
+        font-family: "Nunito", sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 30px;
+        color: black;
+    }
+
+    .home-intro-subtitle {
+        /*subheader under anim*/
+        font-size:15px;
+        position: absolute;
+        top: 85%;
+        left: 50%;
+        transform: translate(-50%, -45%);
+        height: 80px;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .animcontent {
+        /*animated text*/
+
+        position: absolute;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -55%);
+        height: 160px;
+        overflow: hidden;
+
+        font-family: "Nunito", sans-serif;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 30px;
+        color: black;
+
+        &__container {
+            font-weight: 600;
+            overflow: hidden;
+            height: 35px;
+            padding: 0 40px;
+
+            &:before {
+                content: '{';
+                left: 0;
+            }
+
+            &:after {
+                content: '}';
+                position: absolute;
+                right: 0;
+            }
+
+            &:after,
+            &:before {
+                position: absolute;
+                top: 0;
+
+                color: #414280;
+                /*colors brackets*/
+                font-size: 30px;
+                line-height: 30px;
+                /*helps not go in between lines*/
+
+                -webkit-animation-name: opacity;
+                -webkit-animation-duration: 2s;
+                -webkit-animation-iteration-count: infinite;
+                animation-name: opacity;
+                animation-duration: 2s;
+                animation-iteration-count: infinite;
+            }
+
+            &__list {
+                margin-top: 0;
+                padding: 0 40px;
+                text-align: center;
+                list-style: none;
+
+                -webkit-animation-name: change;
+                -webkit-animation-duration: 10s;
+                -webkit-animation-iteration-count: infinite;
+                animation-name: change;
+                animation-duration: 10s;
+                animation-iteration-count: infinite;
+
+                &__item {
+                    line-height: 35px;
                     /*helps not stop in between lines*/
                     margin: 0;
                 }
@@ -652,7 +767,12 @@ body {
             transform: translate3d(0, -20%, 0);
         }
     }
+
+    /*end of main animation*/
 }
+
+
+
 
 /*------------end of index-------------*/
 
